# LalauPremium

./: README.md
migration/: Dockerfile  alembic.ini  base.py  pyproject.toml
schedular/: .env  app.py  pyproject.toml  requirements.txt
schedular/endpoint/: __init__.py  post.py
schedular/lalau/: __init__.py  base.py  bot.py  database.py  logger.py  values.py
schedular/service/: __init__.py  post.py  score.py
schedular/template/: post.py
schedular/utils/: config.py  deep.py  post.py  score.py
telegram/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
telegram/app/: __main__.py
telegram/db/: base.py
telegram/handler/: __init__.py  channel.py  payment.py  plug.py  premium.py  start.py
telegram/handler/app/: control.py  edit.py  main.py  premium.py  register.py
telegram/handler/moder/: app.py  payment.py
telegram/migration/versions/: d398c46d1a90_table.py  f84f74a0bb61_update.py
telegram/module/: edit.py  moder.py  payment.py  plug.py  premium.py  register.py
telegram/template/: app.py  base.py  edit.py  moder.py  payment.py  premium.py  register.py  start.py
telegram/utils/: base.py  config.py  moder.py  premium.py  schedular_main.py  userApp.py
